--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-	<!-- Provider -->
-	<string id="100">General</string>
+	<!-- Login -->
+	<string id="100">Login</string>
 	<string id="140">Username</string>
 	<string id="150">Password</string>
+	<!-- Visual Settings -->
+	<string id="159">Visual</string>
 	<string id="155">Rogers Subscriber</string>
 	<string id="160">Stream Quality</string>
 	<string id="170">No Spoilers</string>
+		<string id="1700">Off</string>
+		<string id="1701">On</string>
+		<string id="1702">Only for Favorite Team</string>
+	<string id ="180">Favorite Team</string>
+	<string id ="190">Display Team Name as</string>
+		<string id ="1900">City (ex: Detroit)</string>
+		<string id ="1901">Team (ex: Red Wings)</string>
+		<string id ="1902">Full (ex: Detroit Red Wings)</string>
+		<string id ="1903">Abbreviated (ex: DET)</string>
+	<string id ="200">Time Format</string>
+		<string id ="2000">12 Hour Clock (ex: 6:00 pm)</string>
+		<string id ="2001">24 Hour Clock (ex: 18:00)</string>
+	<!-- Scoring Updates -->
+	<string id='300'>Score Notifications</string>
+	<string id='320'>Start/Stop Score Notifications</string>
+	<string id='330'>Number of Seconds to Display Score Notifications</string>
 </strings>
 
