--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 2016.2.3
-- beta testing nhl.tv overhaul
+- beta testing for nhl.tv overhaul
 
 2016.1.29
 - Added support for addition camera angles (i.e. Rogers Cams) *most games don't offer these*
